fixed spacing

--- a/css/learning-css.css
+++ b/css/learning-css.css
@@ -1,4 +1,5 @@
-<style>
+<
+style >
 .injected-text {
     margin-bottom: -25px;
     text-align: center;
@@ -19,20 +20,26 @@
 .red-box {
     background-color: crimson;
     color: #fff;
-    padding: 20px;
-    margin: 20px;
+    margin-top: 40px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-left: 40px;
 }
 
 .blue-box {
     background-color: blue;
     color: #fff;
-    padding: 20px;
-    margin: 10px;
+    margin-top: 40px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-left: 40px;
 }
-</style>
-  <h5 class="injected-text">margin</h5>
 
-                                    <div class="box yellow-box">
-                                                               <h5 class="box red-box">padding</h5>
-                                                                                                <h5 class="box blue-box">padding</h5>
-                                                                                                                                  </div>
+</style>
+<h5 class="injected-text">margin</h5>
+
+<div class="box yellow-box">
+<h5 class="box red-box">padding</h5>
+<h5 class="box blue-box">padding</h5>
+
+</div >
